@@ -4,8 +4,8 @@ plugins {
 apply plugin: 'com.diffplug.spotless'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8 
-    targetCompatibility = JavaVersion.VERSION_1_8 
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
@@ -19,6 +19,8 @@ dependencies {
 	implementation("org.checkerframework:checker-qual:3.50.0")
 	implementation 'androidx.annotation:annotation:1.8.2'
  // api 'com.google.googlejavaformat:google-java-format:1.28.0'
+	// https://mvnrepository.com/artifact/org.checkerframework/checker-qual
+   implementation("org.checkerframework:checker-qual:3.50.0")
 }
 
 spotless {
@@ -28,3 +30,18 @@ spotless {
 			}
 }
  
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
+    ]
+}
